comment out push and PR triggers

--- a/.github/workflows/NightlyTests.yml
+++ b/.github/workflows/NightlyTests.yml
@@ -2,21 +2,21 @@ name: NightlyTests
 on:
   workflow_dispatch:
   repository_dispatch:
-  push:
-    branches-ignore:
-      - 'main'
-      - 'feature'
-      - 'v*.*-*'
-    paths-ignore:
-      - '**'
-      - '!.github/workflows/NightlyTests.yml'
-      - '!.github/patches/duckdb-wasm/**'
-  pull_request:
-    types: [opened, reopened, ready_for_review, converted_to_draft]
-    paths-ignore:
-      - '**'
-      - '!.github/workflows/NightlyTests.yml'
-      - '!.github/patches/duckdb-wasm/**'
+  # push:
+  #   branches-ignore:
+  #     - 'main'
+  #     - 'feature'
+  #     - 'v*.*-*'
+  #   paths-ignore:
+  #     - '**'
+  #     - '!.github/workflows/NightlyTests.yml'
+  #     - '!.github/patches/duckdb-wasm/**'
+  # pull_request:
+  #   types: [opened, reopened, ready_for_review, converted_to_draft]
+  #   paths-ignore:
+  #     - '**'
+  #     - '!.github/workflows/NightlyTests.yml'
+  #     - '!.github/patches/duckdb-wasm/**'
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}-${{ github.head_ref || '' }}-${{ github.base_ref || '' }}-${{ github.ref != 'refs/heads/main' || github.sha }}
