--- a/.github/workflows/Python.yml
+++ b/.github/workflows/Python.yml
@@ -29,34 +29,34 @@ on:
       override_twine_upload:
         description: 'Pass "true" to trigger TwineUpload.yml when not on tag or in "main"'
         type: string
-  push:
-    branches-ignore:
-      - 'main'
-      - 'feature'
-      - 'v*.*-*'
-    paths-ignore:
-      - '**.md'
-      - 'examples/**'
-      - 'test/**'
-      - 'tools/**'
-      - '!tools/pythonpkg/**'
-      - '.github/patches/duckdb-wasm/**'
-      - '.github/workflows/**'
-      - '!.github/workflows/Python.yml'
-      - '.github/config/out_of_tree_extensions.cmake'
+  # push:
+  #   branches-ignore:
+  #     - 'main'
+  #     - 'feature'
+  #     - 'v*.*-*'
+  #   paths-ignore:
+  #     - '**.md'
+  #     - 'examples/**'
+  #     - 'test/**'
+  #     - 'tools/**'
+  #     - '!tools/pythonpkg/**'
+  #     - '.github/patches/duckdb-wasm/**'
+  #     - '.github/workflows/**'
+  #     - '!.github/workflows/Python.yml'
+  #     - '.github/config/out_of_tree_extensions.cmake'
   merge_group:
-  pull_request:
-    types: [opened, reopened, ready_for_review, converted_to_draft]
-    paths-ignore:
-      - '**.md'
-      - 'examples/**'
-      - 'test/**'
-      - 'tools/**'
-      - '!tools/pythonpkg/**'
-      - '.github/patches/duckdb-wasm/**'
-      - '.github/workflows/**'
-      - '!.github/workflows/Python.yml'
-      - '.github/config/out_of_tree_extensions.cmake'
+  # pull_request:
+  #   types: [opened, reopened, ready_for_review, converted_to_draft]
+  #   paths-ignore:
+  #     - '**.md'
+  #     - 'examples/**'
+  #     - 'test/**'
+  #     - 'tools/**'
+  #     - '!tools/pythonpkg/**'
+  #     - '.github/patches/duckdb-wasm/**'
+  #     - '.github/workflows/**'
+  #     - '!.github/workflows/Python.yml'
+  #     - '.github/config/out_of_tree_extensions.cmake'
 
 concurrency:
   group: python-${{ github.workflow }}-${{ github.ref }}-${{ github.head_ref || '' }}-${{ github.base_ref || '' }}-${{ github.ref != 'refs/heads/main' || github.sha }}-${{ inputs.override_git_describe }}
