disable push and PR triggers in Windows and OSX too

--- a/.github/workflows/OSX.yml
+++ b/.github/workflows/OSX.yml
@@ -20,19 +20,19 @@ on:
         type: string
       run_all:
         type: string
-  push:
-    branches-ignore:
-      - 'main'
-      - 'feature'
-      - 'v*.*-*'
-    paths-ignore:
-      - '**.md'
-      - 'test/configs/**'
-      - 'tools/**'
-      - '!tools/shell/**'
-      - '.github/patches/duckdb-wasm/**'
-      - '.github/workflows/**'
-      - '!.github/workflows/OSX.yml'
+  # push:
+  #   branches-ignore:
+  #     - 'main'
+  #     - 'feature'
+  #     - 'v*.*-*'
+  #   paths-ignore:
+  #     - '**.md'
+  #     - 'test/configs/**'
+  #     - 'tools/**'
+  #     - '!tools/shell/**'
+  #     - '.github/patches/duckdb-wasm/**'
+  #     - '.github/workflows/**'
+  #     - '!.github/workflows/OSX.yml'
 
 
 concurrency:
