--- a/.github/workflows/Windows.yml
+++ b/.github/workflows/Windows.yml
@@ -20,31 +20,31 @@ on:
         type: string
       run_all:
         type: string
-  push:
-    branches-ignore:
-      - 'main'
-      - 'feature'
-      - 'v*.*-*'
-    paths-ignore:
-      - '**.md'
-      - 'test/configs/**'
-      - 'tools/**'
-      - '!tools/shell/**'
-      - '.github/patches/duckdb-wasm/**'
-      - '.github/workflows/**'
-      - '!.github/workflows/Windows.yml'
+  # push:
+  #   branches-ignore:
+  #     - 'main'
+  #     - 'feature'
+  #     - 'v*.*-*'
+  #   paths-ignore:
+  #     - '**.md'
+  #     - 'test/configs/**'
+  #     - 'tools/**'
+  #     - '!tools/shell/**'
+  #     - '.github/patches/duckdb-wasm/**'
+  #     - '.github/workflows/**'
+  #     - '!.github/workflows/Windows.yml'
 
   merge_group:
-  pull_request:
-    types: [opened, reopened, ready_for_review, converted_to_draft]
-    paths-ignore:
-      - '**.md'
-      - 'test/configs/**'
-      - 'tools/**'
-      - '!tools/shell/**'
-      - '.github/patches/duckdb-wasm/**'
-      - '.github/workflows/**'
-      - '!.github/workflows/Windows.yml'
+  # pull_request:
+  #   types: [opened, reopened, ready_for_review, converted_to_draft]
+  #   paths-ignore:
+  #     - '**.md'
+  #     - 'test/configs/**'
+  #     - 'tools/**'
+  #     - '!tools/shell/**'
+  #     - '.github/patches/duckdb-wasm/**'
+  #     - '.github/workflows/**'
+  #     - '!.github/workflows/Windows.yml'
 
 
 concurrency:
