update called workflows - remove check-draft job, because it is in orchestrating workflow now move paths-ignore to ci_filters.yml

--- a/.github/ci_filters.yaml
+++ b/.github/ci_filters.yaml
@@ -28,3 +28,69 @@ workflows:
       - '.github/workflows/**'
       - '!.github/workflows/Julia.yml'
       - '.github/config/out_of_tree_extensions.cmake'
+  CIFuzz:
+    paths-ignore:
+      - '**.md'
+      - 'tools/**'
+      - '.github/patches/duckdb-wasm/**'
+      - '.github/workflows/**'
+      - '!.github/workflows/cifuzz.yml'
+  LinuxRelease:
+      paths-ignore:
+      - '**.md'
+      - 'test/configs/**'
+      - 'tools/**'
+      - '!tools/shell/**'
+      - '.github/patches/duckdb-wasm/**'
+      - '.github/workflows/**'
+      - '!.github/workflows/LinuxRelease.yml'
+  Regression:
+    paths-ignore:
+      - '**.md'
+      - 'test/configs/**'
+      - 'tools/**'
+      - '!tools/pythonpkg/**'
+      - '.github/patches/duckdb-wasm/**'
+      - '.github/workflows/**'
+      - '!.github/workflows/Regression.yml'
+      - '.github/config/out_of_tree_extensions.cmake'
+  OSX:
+    paths-ignore:
+      - '**.md'
+      - 'test/configs/**'
+      - 'tools/**'
+      - '!tools/shell/**'
+      - '.github/patches/duckdb-wasm/**'
+      - '.github/workflows/**'
+      - '!.github/workflows/OSX.yml'
+  Python:
+      paths-ignore:
+      - '**.md'
+      - 'examples/**'
+      - 'test/**'
+      - 'tools/**'
+      - '!tools/pythonpkg/**'
+      - '.github/patches/duckdb-wasm/**'
+      - '.github/workflows/**'
+      - '!.github/workflows/Python.yml'
+      - '.github/config/out_of_tree_extensions.cmake'
+  Windows:
+      paths-ignore:
+      - '**.md'
+      - 'test/configs/**'
+      - 'tools/**'
+      - '!tools/shell/**'
+      - '.github/patches/duckdb-wasm/**'
+      - '.github/workflows/**'
+      - '!.github/workflows/Windows.yml'
+  Swift:
+      paths-ignore:
+      - '**.md'
+      - 'examples/**'
+      - 'test/**'
+      - 'tools/**'
+      - '!tools/swift/**'
+      - '.github/patches/duckdb-wasm/**'
+      - '.github/workflows/**'
+      - '!.github/workflows/Swift.yml'
+      - '.github/config/out_of_tree_extensions.cmake'
