--- a/src/include/duckdb/main/capi/header_generation/header_base.hpp.template
+++ b/src/include/duckdb/main/capi/header_generation/header_base.hpp.template
@@ -243,6 +243,50 @@ typedef enum duckdb_cast_mode {
 	DUCKDB_CAST_TRY = 1
 } duckdb_cast_mode;
 
+//! An enum over DuckDB's expression classes.
+typedef enum duckdb_expression_class {
+	DUCKDB_EXPR_CLASS_INVALID = 0,
+	DUCKDB_EXPR_CLASS_AGGREGATE = 1,
+	DUCKDB_EXPR_CLASS_CASE = 2,
+	DUCKDB_EXPR_CLASS_CAST = 3,
+	DUCKDB_EXPR_CLASS_COLUMN_REF = 4,
+	DUCKDB_EXPR_CLASS_COMPARISON = 5,
+	DUCKDB_EXPR_CLASS_CONJUNCTION = 6,
+	DUCKDB_EXPR_CLASS_CONSTANT = 7,
+	DUCKDB_EXPR_CLASS_DEFAULT = 8,
+	DUCKDB_EXPR_CLASS_FUNCTION = 9,
+	DUCKDB_EXPR_CLASS_OPERATOR = 10,
+	DUCKDB_EXPR_CLASS_STAR = 11,
+	DUCKDB_EXPR_CLASS_SUBQUERY = 12,
+	DUCKDB_EXPR_CLASS_WINDOW = 13,
+	DUCKDB_EXPR_CLASS_PARAMETER = 14,
+	DUCKDB_EXPR_CLASS_COLLATE = 15,
+	DUCKDB_EXPR_CLASS_LAMBDA = 16,
+	DUCKDB_EXPR_CLASS_POSITIONAL_REFERENCE = 17,
+	DUCKDB_EXPR_CLASS_BETWEEN = 18,
+	DUCKDB_EXPR_CLASS_LAMBDA_REF = 19,
+	DUCKDB_EXPR_CLASS_BOUND_AGGREGATE = 20,
+	DUCKDB_EXPR_CLASS_BOUND_CASE = 21,
+	DUCKDB_EXPR_CLASS_BOUND_CAST = 22,
+	DUCKDB_EXPR_CLASS_BOUND_COLUMN_REF = 23,
+	DUCKDB_EXPR_CLASS_BOUND_COMPARISON = 24,
+	DUCKDB_EXPR_CLASS_BOUND_CONJUNCTION = 25,
+	DUCKDB_EXPR_CLASS_BOUND_CONSTANT = 26,
+	DUCKDB_EXPR_CLASS_BOUND_DEFAULT = 27,
+	DUCKDB_EXPR_CLASS_BOUND_FUNCTION = 28,
+	DUCKDB_EXPR_CLASS_BOUND_OPERATOR = 29,
+	DUCKDB_EXPR_CLASS_BOUND_PARAMETER = 30,
+	DUCKDB_EXPR_CLASS_BOUND_REF = 31,
+	DUCKDB_EXPR_CLASS_BOUND_SUBQUERY = 32,
+	DUCKDB_EXPR_CLASS_BOUND_WINDOW = 33,
+	DUCKDB_EXPR_CLASS_BOUND_BETWEEN = 34,
+	DUCKDB_EXPR_CLASS_BOUND_UNNEST = 35,
+	DUCKDB_EXPR_CLASS_BOUND_LAMBDA = 36,
+	DUCKDB_EXPR_CLASS_BOUND_LAMBDA_REF = 37,
+	DUCKDB_EXPR_CLASS_BOUND_EXPRESSION = 38,
+	DUCKDB_EXPR_CLASS_BOUND_EXPANDED = 39
+} duckdb_expression_class;
+
 //===--------------------------------------------------------------------===//
 // General type definitions
 //===--------------------------------------------------------------------===//
