--- a/.github/workflows/Julia.yml
+++ b/.github/workflows/Julia.yml
@@ -4,6 +4,17 @@ on:
   workflow_dispatch:
   repository_dispatch:
   merge_group:
+  push:
+    paths-ignore:
+      - '**.md'
+      - 'examples/**'
+      - 'test/**'
+      - 'tools/**'
+      - '!tools/juliapkg/**'
+      - '.github/patches/duckdb-wasm/**'
+      - '.github/workflows/**'
+      - '!.github/workflows/Julia.yml'
+      - '.github/config/out_of_tree_extensions.cmake'
 
 concurrency:
   group: julia-${{ github.workflow }}-${{ github.ref }}-${{ github.head_ref || '' }}-${{ github.base_ref || '' }}-${{ github.ref != 'refs/heads/main' || github.sha }}
