--- a/.github/workflows/OnPullRequest.yml
+++ b/.github/workflows/OnPullRequest.yml
@@ -1,10 +1,5 @@
 name: OnPushOnPullRequest
 on:
-  push:
-    branches-ignore:
-      - 'main'
-      - 'feature'
-      - 'v*.*-*'
   pull_request:
     types: [opened, reopened, ready_for_review, converted_to_draft]
       
@@ -44,10 +39,10 @@ jobs:
     uses: ./.github/workflows/CodeQuality.yml
     needs: check-draft
     if: ${{ fromJson(needs.check-draft.outputs.should_run).CodeQuality == true }}
-  ci-fuzz:
-    uses: ./.github/workflows/cifuzz.yml
-    needs: check-draft
-    if: ${{ fromJson(needs.check-draft.outputs.should_run).CIFuzz == true && github.event_name != 'pull_request' }}
+  # ci-fuzz:
+  #   uses: ./.github/workflows/cifuzz.yml
+  #   needs: check-draft
+  #   if: ${{ fromJson(needs.check-draft.outputs.should_run).CIFuzz == true && github.event_name != 'pull_request' }}
   julia:
     uses: ./.github/workflows/Julia.yml
     needs: check-draft
@@ -60,10 +55,10 @@ jobs:
     uses: ./.github/workflows/Main.yml
     needs: check-draft
     if: ${{ fromJson(needs.check-draft.outputs.should_run).Main == true }}
-  osx:
-    uses: ./.github/workflows/OSX.yml
-    needs: check-draft
-    if: ${{ fromJson(needs.check-draft.outputs.should_run).OSX == true && github.event_name != 'pull_request' }}
+  # osx:
+  #   uses: ./.github/workflows/OSX.yml
+  #   needs: check-draft
+  #   if: ${{ fromJson(needs.check-draft.outputs.should_run).OSX == true && github.event_name != 'pull_request' }}
   python:
     uses: ./.github/workflows/Python.yml
     needs: check-draft
