--- a/.github/workflows/Python.yml
+++ b/.github/workflows/Python.yml
@@ -30,6 +30,17 @@ on:
         description: 'Pass "true" to trigger TwineUpload.yml when not on tag or in "main"'
         type: string
   merge_group:
+  push:
+    paths-ignore:
+    - '**.md'
+    - 'examples/**'
+    - 'test/**'
+    - 'tools/**'
+    - '!tools/pythonpkg/**'
+    - '.github/patches/duckdb-wasm/**'
+    - '.github/workflows/**'
+    - '!.github/workflows/Python.yml'
+    - '.github/config/out_of_tree_extensions.cmake'
 
 concurrency:
   group: python-${{ github.workflow }}-${{ github.ref }}-${{ github.head_ref || '' }}-${{ github.base_ref || '' }}-${{ github.ref != 'refs/heads/main' || github.sha }}-${{ inputs.override_git_describe }}
