--- a/.github/workflows/Regression.yml
+++ b/.github/workflows/Regression.yml
@@ -11,7 +11,16 @@ on:
         type: string
   repository_dispatch:
   merge_group:
-
+  push:
+    paths-ignore:
+      - '**.md'
+      - 'test/configs/**'
+      - 'tools/**'
+      - '!tools/pythonpkg/**'
+      - '.github/patches/duckdb-wasm/**'
+      - '.github/workflows/**'
+      - '!.github/workflows/Regression.yml'
+      - '.github/config/out_of_tree_extensions.cmake'
 concurrency:
   group: regression-${{ github.workflow }}-${{ github.ref }}-${{ github.head_ref || '' }}-${{ github.base_ref || '' }}-${{ github.ref != 'refs/heads/main' || github.sha }}
   cancel-in-progress: true
