--- a/.github/workflows/CodeQuality.yml
+++ b/.github/workflows/CodeQuality.yml
@@ -8,6 +8,15 @@ on:
         type: string
   repository_dispatch:
   merge_group:
+  push:
+    paths-ignore:
+      - '**.md'
+      - 'test/configs/**'
+      - '.github/patches/duckdb-wasm/**'
+      - '.github/workflows/**'
+      - '!.github/workflows/lcov_exclude'
+      - '!.github/workflows/CodeQuality.yml'
+      - '.github/config/out_of_tree_extensions.cmake'
 
 concurrency:
   group: codequality-${{ github.workflow }}-${{ github.ref }}-${{ github.head_ref || '' }}-${{ github.base_ref || '' }}-${{ github.ref != 'refs/heads/main' || github.sha }}
