--- a/.github/workflows/Main.yml
+++ b/.github/workflows/Main.yml
@@ -4,7 +4,15 @@ on:
   repository_dispatch:
   workflow_call:
   merge_group:
-
+  push:
+    paths-ignore:
+      - '**.md'
+      - 'tools/**'
+      - '!tools/shell/**'
+      - '.github/patches/duckdb-wasm/**'
+      - '.github/workflows/**'
+      - '!.github/workflows/Main.yml'
+      - '.github/config/out_of_tree_extensions.cmake'
 
 concurrency:
   group: main-${{ github.workflow }}-${{ github.ref }}-${{ github.head_ref || '' }}-${{ github.base_ref || '' }}-${{ github.ref != 'refs/heads/main' || github.sha }}
