add missing  PR_NUMBER env and clean up

--- a/.github/workflows/OnPullRequest.yml
+++ b/.github/workflows/OnPullRequest.yml
@@ -1,4 +1,4 @@
-name: OnPushOnPullRequest
+name: PullRequest
 on:
   pull_request:
     types: [opened, reopened, ready_for_review, converted_to_draft]
@@ -32,6 +32,7 @@ jobs:
       - id: ci-filters
         env:
           GITHUB_OUTPUT: ${{ github.output }}
+          PR_NUMBER: ${{ github.event.number }}
         run: |
             python scripts/apply_filters.py
     
@@ -39,10 +40,6 @@ jobs:
     uses: ./.github/workflows/CodeQuality.yml
     needs: check-draft
     if: ${{ fromJson(needs.check-draft.outputs.should_run).CodeQuality == true }}
-  # ci-fuzz:
-  #   uses: ./.github/workflows/cifuzz.yml
-  #   needs: check-draft
-  #   if: ${{ fromJson(needs.check-draft.outputs.should_run).CIFuzz == true && github.event_name != 'pull_request' }}
   julia:
     uses: ./.github/workflows/Julia.yml
     needs: check-draft
@@ -55,10 +52,6 @@ jobs:
     uses: ./.github/workflows/Main.yml
     needs: check-draft
     if: ${{ fromJson(needs.check-draft.outputs.should_run).Main == true }}
-  # osx:
-  #   uses: ./.github/workflows/OSX.yml
-  #   needs: check-draft
-  #   if: ${{ fromJson(needs.check-draft.outputs.should_run).OSX == true && github.event_name != 'pull_request' }}
   python:
     uses: ./.github/workflows/Python.yml
     needs: check-draft
