on push - just to appear in workflows list

--- a/.github/workflows/OnPullRequest.yml
+++ b/.github/workflows/OnPullRequest.yml
@@ -3,6 +3,7 @@ name: OnPullRequest
 # It applies paths-ignore from .github/ci_filters.yaml to file names found
 # in PR diff and triggers the downstream worfklows when not ignored files got updated
 on:
+  push:
   pull_request:
     types: [opened, reopened, ready_for_review, converted_to_draft]
       
