disable wasm builds for all triggers

--- a/.github/workflows/NightlyTests.yml
+++ b/.github/workflows/NightlyTests.yml
@@ -595,8 +595,8 @@ jobs:
 
   linux-wasm-experimental:
     name: WebAssembly duckdb-wasm builds
-    # disable in NightlyTests triggered by workflow_dispatch
-    if: github.event_name != 'workflow_dispatch'
+    # disable in NightlyTests
+    if: false
     needs: check-draft
     runs-on: ubuntu-22.04
     steps:
