filters are opposite to ignore-list - if path begins with !, it should be ignored

--- a/.github/filters.yaml
+++ b/.github/filters.yaml
@@ -1,72 +1,72 @@
 workflows:
   codequality:
-    - '**.md'
-    - 'test/configs/**'
-    - '.github/patches/duckdb-wasm/**'
-    - '.github/workflows/**'
-    - '!.github/workflows/lcov_exclude'
-    - '!.github/workflows/CodeQuality.yml'
-    - '.github/config/out_of_tree_extensions.cmake'
+    - '!**.md'
+    - '!test/configs/**'
+    - '!.github/patches/duckdb-wasm/**'
+    - '!.github/workflows/**'
+    - '.github/workflows/lcov_exclude'
+    - '.github/workflows/CodeQuality.yml'
+    - '!.github/config/out_of_tree_extensions.cmake'
   julia:
-    - '**.md'
-    - 'examples/**'
-    - 'test/**'
-    - 'tools/**'
-    - '!tools/juliapkg/**'
-    - '.github/patches/duckdb-wasm/**'
-    - '.github/workflows/**'
-    - '!.github/workflows/Julia.yml'
-    - '.github/config/out_of_tree_extensions.cmake'
+    - '!**.md'
+    - '!examples/**'
+    - '!test/**'
+    - '!tools/**'
+    - 'tools/juliapkg/**'
+    - '!.github/patches/duckdb-wasm/**'
+    - '!.github/workflows/**'
+    - '.github/workflows/Julia.yml'
+    - '!.github/config/out_of_tree_extensions.cmake'
   linuxrelease:
-    - '**.md'
-    - 'test/configs/**'
-    - 'tools/**'
-    - '!tools/shell/**'
-    - '.github/patches/duckdb-wasm/**'
-    - '.github/workflows/**'
-    - '!.github/workflows/LinuxRelease.yml'
+    - '!**.md'
+    - '!test/configs/**'
+    - '!tools/**'
+    - 'tools/shell/**'
+    - '!.github/patches/duckdb-wasm/**'
+    - '!.github/workflows/**'
+    - '.github/workflows/LinuxRelease.yml'
   main:
-    - '**.md'
-    - 'tools/**'
-    - '!tools/shell/**'
-    - '.github/patches/duckdb-wasm/**'
-    - '.github/workflows/**'
-    - '!.github/workflows/Main.yml'
-    - '.github/config/out_of_tree_extensions.cmake'
+    - '!**.md'
+    - '!tools/**'
+    - 'tools/shell/**'
+    - '!.github/patches/duckdb-wasm/**'
+    - '!.github/workflows/**'
+    - '.github/workflows/Main.yml'
+    - '!.github/config/out_of_tree_extensions.cmake'
   python:
-    - '**.md'
-    - 'examples/**'
-    - 'test/**'
-    - 'tools/**'
-    - '!tools/pythonpkg/**'
-    - '.github/patches/duckdb-wasm/**'
-    - '.github/workflows/**'
-    - '!.github/workflows/Python.yml'
-    - '.github/config/out_of_tree_extensions.cmake'
+    - '!**.md'
+    - '!examples/**'
+    - '!test/**'
+    - '!tools/**'
+    - 'tools/pythonpkg/**'
+    - '!.github/patches/duckdb-wasm/**'
+    - '!.github/workflows/**'
+    - '.github/workflows/Python.yml'
+    - '!.github/config/out_of_tree_extensions.cmake'
   regression:
-    - '**.md'
-    - 'test/configs/**'
-    - 'tools/**'
-    - '!tools/pythonpkg/**'
-    - '.github/patches/duckdb-wasm/**'
-    - '.github/workflows/**'
-    - '!.github/workflows/Regression.yml'
-    - '.github/config/out_of_tree_extensions.cmake'
+    - '!**.md'
+    - '!test/configs/**'
+    - '!tools/**'
+    - 'tools/pythonpkg/**'
+    - '!.github/patches/duckdb-wasm/**'
+    - '!.github/workflows/**'
+    - '.github/workflows/Regression.yml'
+    - '!.github/config/out_of_tree_extensions.cmake'
   swift:
-    - '**.md'
-    - 'examples/**'
-    - 'test/**'
-    - 'tools/**'
-    - '!tools/swift/**'
-    - '.github/patches/duckdb-wasm/**'
-    - '.github/workflows/**'
-    - '!.github/workflows/Swift.yml'
-    - '.github/config/out_of_tree_extensions.cmake'
+    - '!**.md'
+    - '!examples/**'
+    - '!test/**'
+    - '!tools/**'
+    - 'tools/swift/**'
+    - '!.github/patches/duckdb-wasm/**'
+    - '!.github/workflows/**'
+    - '.github/workflows/Swift.yml'
+    - '!.github/config/out_of_tree_extensions.cmake'
   windows:
-    - '**.md'
-    - 'test/configs/**'
-    - 'tools/**'
-    - '!tools/shell/**'
-    - '.github/patches/duckdb-wasm/**'
-    - '.github/workflows/**'
-    - '!.github/workflows/Windows.yml'
+    - '!**.md'
+    - '!test/configs/**'
+    - '!tools/**'
+    - 'tools/shell/**'
+    - '!.github/patches/duckdb-wasm/**'
+    - '!.github/workflows/**'
+    - '.github/workflows/Windows.yml'
