Sweet sweet destroy functions

--- a/src/include/duckdb/main/capi/header_generation/header_base.hpp.template
+++ b/src/include/duckdb/main/capi/header_generation/header_base.hpp.template
@@ -711,18 +711,18 @@ typedef struct _duckdb_arrow_stream {
 	void *internal_ptr;
 } * duckdb_arrow_stream;
 
-//! Holds an arrow schema. Remember to release the respective ArrowSchema object.
+//! Holds an arrow schema. Must be destroyed with `duckdb_destroy_arrow_schema`
 typedef struct _duckdb_arrow_schema {
 	void *internal_ptr;
 } * duckdb_arrow_schema;
 
-//! Holds an arrow converted schema (i.e., duckdb::ArrowTableType)
-// Remember to release the respective ArrowConvertedSchema object.
+//! Holds an arrow converted schema (i.e., duckdb::ArrowTableType).
+//! Must be destroyed with `duckdb_destroy_arrow_converted_schema`
 typedef struct _duckdb_arrow_converted_schema {
 	void *internal_ptr;
 } * duckdb_arrow_converted_schema;
 
-//! Holds an arrow array. Remember to release the respective ArrowArray object.
+//! Holds an arrow array. Must be destroyed with `duckdb_destroy_arrow_array`
 typedef struct _duckdb_arrow_array {
 	void *internal_ptr;
 } * duckdb_arrow_array;
