Internal #3273: Window Hashed Sort
* Checkpoint commit of AMS work.

--- a/src/common/sorting/CMakeLists.txt
+++ b/src/common/sorting/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_library_unity(duckdb_sorting OBJECT sort.cpp sorted_run.cpp
+add_library_unity(duckdb_sorting OBJECT hashed_sort.cpp sort.cpp sorted_run.cpp
                   sorted_run_merger.cpp)
 
 set(ALL_OBJECT_FILES
