add 'variant_legacy_encoding' option, to enable identifying Variant columns by structure (STRUCT(metadata BLOB, value BLOB))

--- a/src/common/settings.json
+++ b/src/common/settings.json
@@ -861,6 +861,12 @@
         ]
     },
     {
+        "name": "variant_legacy_encoding",
+        "description": "Enables the Parquet reader to identify a Variant structurally.",
+        "type": "BOOLEAN",
+        "scope": "global"
+    },
+    {
         "name": "wal_encryption",
         "description": "Encrypt the WAL if the database is encrypted",
         "type": "BOOLEAN",
